--- a/src/index.css
+++ b/src/index.css
@@ -76,13 +76,15 @@ h4 {
 .progress-ring__circle {
     transition: 0.35s stroke-dashoffset;
 /*// axis compensation*/
-    transform: rotate(-90deg);
+    transform: rotate(135deg);
     transform-origin: 50% 50%;
 }
 
+.range {
+
+}
+
 input {
-    position: relative;
-    top: 10px;
-    left: 10px;
-    width: 80px;
+    width: 100%;
+    height: 32px;
 }
