--- a/src/App.global.css
+++ b/src/App.global.css
@@ -1,58 +1,88 @@
-/*
- * @NOTE: Prepend a `~` to css file paths that are in your node_modules
- *        See https://github.com/webpack-contrib/sass-loader#imports
- */
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
+  font-family: Arial, Helvetica, Verdana, sans-serif;
+  cursor: default;
+  background: #212121;
+  color: #ffcc00;
   position: relative;
-  color: white;
+}
+
+header {
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+
+main {
+  padding: 80px 20px;
   height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
+}
+main .container {
+  height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-}
-
-button {
-  background-color: white;
-  padding: 10px 20px;
-  margin: 10px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: transform ease-in 0.1s;
-}
-
-button:hover {
-  transform: scale(1.05);
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.Hello {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  margin: 20px 0;
+}
+.content {
+  text-align: center;
+}
+
+.speed {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+.speed .number {
+  font-size: 80px;
+  font-weight: bold;
+}
+.speed .unit {
+  font-size: 24px;
+}
+
+footer {
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  text-align: center;
+}
+
+/*-----------*/
+
+.progress-ring {
+}
+.progress-ring__circle {
+  transition: 0.35s stroke-dashoffset;
+  /*// axis compensation*/
+  transform: rotate(135deg);
+  transform-origin: 50% 50%;
+}
+
+.range {
+}
+
+input {
+  width: 100%;
+  height: 32px;
 }
