--- a/src/App.global.css
+++ b/src/App.global.css
@@ -13,18 +13,45 @@ body {
   background: #212121;
   color: #ffcc00;
   position: relative;
+  padding: 0;
+  margin: 0;
 }
 
 header {
   width: 100%;
-  height: 80px;
+  height: 100px;
   position: absolute;
   top: 0;
   z-index: 1;
+  display: flex;
+  flex-direction: row;
+}
+header .menu_btn {
+  border-bottom: 1px solid #ffcc00;
+  border-right: 1px solid #ffcc00;
+  color: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: inherit;
+  margin-bottom: 16px;
+}
+header .menu_btn:last-child {
+  border-right: none;
+}
+header .menu_btn.active {
+  color: #ffcc00;
+  border-radius: 0 0 20px 20px;
+  margin-bottom: 0;
+  padding-bottom: 16px;
+  border: 1px solid #ffcc00;
+  border-top: none;
+  position: relative;
+  left: -1px;
 }
 
 main {
-  padding: 80px 20px;
+  padding: 100px 0;
   height: 100vh;
 }
 main .container {
@@ -38,27 +65,71 @@ main .container {
   text-align: center;
 }
 
+.speed_box {
+  position: relative;
+  width: 400px;
+  height: 400px;
+}
+
+.progress-ring {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .speed {
   position: absolute;
-  top: 50%;
+  top: 32%;
   left: 0;
   width: 100%;
   text-align: center;
 }
 .speed .number {
-  font-size: 110px;
+  font-size: 120px;
   font-weight: bold;
 }
 .speed .unit {
-  font-size: 24px;
+  font-size: 32px;
+}
+.battery {
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  left: 0;
+  font-size: 60px;
 }
 
 footer {
   width: 100%;
-  height: 80px;
+  height: 100px;
   position: absolute;
   bottom: 0;
   z-index: 1;
+  display: flex;
+  flex-direction: row;
+}
+footer .menu_btn {
+  border-top: 1px solid #ffcc00;
+  border-right: 1px solid #ffcc00;
+  color: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: inherit;
+  margin-top: 16px;
+}
+footer .menu_btn:last-child {
+  border-right: none;
+}
+footer .menu_btn.active {
+  margin-top: 0;
+  padding-top: 16px;
+  border: 1px solid #ffcc00;
+  border-bottom: none;
+  color: #ffcc00;
+  border-radius: 20px 20px 0 0;
+  position: relative;
+  left: -1px;
 }
 
 h1,
