--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,4 +1,13 @@
-header {
+.menu_btn {
+  border: none;
+  outline: none;
+  background: none;
+  svg {
+    pointer-events: none;
+  }
+}
+
+.header {
   width: 100%;
   height: 100px;
   position: absolute;
@@ -27,6 +36,9 @@ header {
       border-top: none;
       position: relative;
       left: -1px;
+      &:last-child {
+        border-right: none;
+      }
     }
   }
 }
@@ -37,7 +49,7 @@ header {
   position: relative;
 }
 
-footer {
+.footer {
   width: 100%;
   height: 100px;
   position: absolute;
@@ -45,31 +57,30 @@ footer {
   z-index: 1;
   display: flex;
   flex-direction: row;
-}
-footer .menu_btn {
-  border-top: 1px solid #ffcc00;
-  border-right: 1px solid #ffcc00;
-  color: grey;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: inherit;
-  margin-top: 16px;
-}
-footer .menu_btn:last-child {
-  border-right: none;
-}
-footer .menu_btn.active {
-  margin-top: 0;
-  padding-top: 16px;
-  border: 1px solid #ffcc00;
-  border-bottom: none;
-  color: #ffcc00;
-  border-radius: 20px 20px 0 0;
-  position: relative;
-  left: -1px;
-}
-
-.hidden {
-  display: none;
+  .menu_btn {
+    border-top: 1px solid #ffcc00;
+    border-right: 1px solid #ffcc00;
+    color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: inherit;
+    margin-top: 16px;
+    &:last-child {
+      border-right: none;
+    }
+    &.active {
+      margin-top: 0;
+      padding-top: 16px;
+      border: 1px solid #ffcc00;
+      border-bottom: none;
+      color: #ffcc00;
+      border-radius: 20px 20px 0 0;
+      position: relative;
+      left: -1px;
+      &:last-child {
+        border-right: none;
+      }
+    }
+  }
 }
